<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_imei_no"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/connection_status"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/charging_status"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_charge"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_stamp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_IMEI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:text="@string/_1234567890"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"

                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_con_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/internet_con_status_string"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"/>

                    <TextView
                        android:id="@+id/tv_charging_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/charging"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_battery_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_time_stamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_stamp_format"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>